src/main/java/com/example/green/global/error/exception/StorageException.java
package com.example.green.global.error.exception;

public class StorageException extends RuntimeException {

	public StorageException(Throwable cause) {
		super(cause);
	}
}
